src/app/components/menu/menu.component.scss
@import "../../../theme";

.sidenav-container {
  width: 100%;
  height: 100%;
  background-color: $menu-bar-colour;
  mat-drawer {
    background-color: $menu-bar-colour;
  }
}

.sidenav-content {
  display: flex;
  min-height: 100vh;
  align-items: center;
  justify-content: flex-start;
  flex-direction: column;
  background-color: $background-colour;
}

.sidenav {
  padding: 20px;
  z-index: 999;
  position: fixed;
  top: 0px;
  left: 0;
  border-right: $menu-border;
  box-shadow: $menu-shadow;
}

.header {
  width: 100%;
}

.menu-button {
  button {
    padding: 6px 12px 6px 6px;
    position: fixed;
    top: 4px;
    left: 0;
    border-radius: 0 25px 25px 0;
    z-index: 1000;
  }
}

.space-for-menu-button {
  min-height: 48px;
}

.menu-seperator {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
}

.upper-menu {
  display: flex;
  flex-direction: column;
}

.lower-menu {
  margin-top: -48px;
}

.sidenav-button {
  background-color: transparent;
  text-align: left;
  color: $menu-text-colour;
  &:hover {
    color: $menu-item-hover-text;
    background-color: $menu-item-hover !important;
  }
}

.sidenav-expansion-panel {
  border-radius: 0 !important;
  box-shadow: none;
  ::ng-deep .mat-expansion-panel-content {
    background-color: $menu-bar-colour !important;
  }
}

.sidenav-button-expansion {
  text-align: left;
  padding-left: 16px;
  background-color: $menu-bar-colour !important;
  &:hover {
    background-color: $menu-item-hover !important;
    .sidenav-expansion-title {
      color: $menu-item-hover-text;
    }
    ::ng-deep .mat-expansion-indicator:after {
      color: $menu-item-hover-text;
    }
  }
  ::ng-deep .mat-expansion-indicator:after {
    color: $menu-text-colour;
  }
}

.sidenav-expansion-title {
  color: $menu-text-colour;
}

.drawer-content {
  display: flex;
  flex-direction: column;
  height: calc(100% - 48px);
}

.expansion-panel-content {
  display: flex;
  flex-direction: column;
}

.languages {
  button {
    margin: 2px;
    &:hover {
      background-color: $menu-item-hover;
    }
  }
  img {
    max-width: 26px;
    margin: 0;
  }
}

